--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,11 +10,6 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- Bootstrap CSS -->
     <link
@@ -24,7 +19,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Portfolio</title>
+    <title>Junior Medina</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
