--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,11 +5,16 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="author" content="Junior Medina" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="This is my website where you can see my projects and a brief description of me"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta
+      name="keywords"
+      content="junior, medina, junior medina, portfolio, portafolio, Junior, Medina, de, proyectos, proyecto, project, projects, developer, desarrollador, desarrollo, developing, frontend, backend, full stack, full, stack"
+    />
+    <meta property="og:image" content="../src/assets/Portfolio_capture.PNG" />
 
     <!-- Bootstrap CSS -->
     <link
