refactor: enhance component documentation and improve code readability

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,22 @@
+<!--
+  Dev Portfolio - HTML Entry Point
+  This file serves as the main HTML structure for the application.
+  It includes the root container for the React application and links to the main TypeScript entry point.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"/>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Minimalist Responsive Portfolio</title>
+    <meta charset="UTF-8"/> <!-- Specifies the character encoding for the document -->
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/> <!-- Ensures responsive design on mobile devices -->
+    <title>Junior Medina</title> <!-- Title of the web page -->
 </head>
 
 <body>
-<div id="root"></div>
-<script src="/src/main.tsx" type="module"></script>
+    <!-- Root container for the React application -->
+    <div id="root"></div>
+
+    <!-- Script to load the main TypeScript entry point -->
+    <script src="/src/main.tsx" type="module"></script>
 </body>
 </html>
