chore: update imports to remove version numbers and improve code consistency

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,16 +7,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"/> <!-- Specifies the character encoding for the document -->
-    <meta content="width=device-width, initial-scale=1.0" name="viewport"/> <!-- Ensures responsive design on mobile devices -->
-    <title>Junior Medina</title> <!-- Title of the web page -->
+  <meta charset="UTF-8" /> <!-- Specifies the character encoding for the document -->
+  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+                           <!-- Ensures responsive design on mobile devices -->
+  <title>Junior Medina</title> <!-- Title of the web page -->
 </head>
 
 <body>
-    <!-- Root container for the React application -->
-    <div id="root"></div>
+<!-- Root container for the React application -->
+<div id="root"></div>
 
-    <!-- Script to load the main TypeScript entry point -->
-    <script src="/src/main.tsx" type="module"></script>
+<!-- Script to load the main TypeScript entry point -->
+<script src="./src/main.tsx" type="module"></script>
 </body>
 </html>
